Sixth Commit:
Added CallOfDuty